The right hand 3px of the book were being cut off, this is now fixed.

--- a/styles/style.css
+++ b/styles/style.css
@@ -570,7 +570,7 @@ a {
 }
 
 #mc-book-right {
-	width: 522px;
+	width: 525px;
 	height: 700px;
 	background-image: url('../assets/book-right.png');
 	position: absolute;
